[refs #37] > Made the top navigation a little more responsive: since adding an extra button ["Links"] this meant that there was a narrow band of screen sizes in the "sm" Bootstrap category where the navigation bar was too long and wrapping around onto two lines. Fixed this with some media queries to set the buttons to the default size and remove some additional padding on "sm" screens, and for larger displays set the buttons to the larger size and re-instate the padding. Works well, but this is only a temporary measure... as the site grows and more buttons are added to the top navigation bar I will need to figure out a better solution.
> Made a couple of Bootstrap tweaks to the Astro Pics page. I DID have this working fine yesterday, but then some of the CSS tweaks I made this morning affected the AstroPics containers as well as the screenshots so just needed a couple of extra .clearfix divs to ensure tidyness on all screen types.

--- a/css/main.css
+++ b/css/main.css
@@ -112,13 +112,31 @@
 	white-space: normal !important;
 }
 
+@media only screen and (max-width: 991px)
+{
+	.list-inline>li
+	{
+		padding: 0px !important;
+	}
+}
+
+@media only screen and (min-width: 992px)
+{
+	.top
+	{
+		padding: 10px 16px !important;
+		font-size: 18px !important;
+		line-height: 1.33333333 !important;
+		border-radius: 6px !important;
+	}
+}
+
 .left
 {
 	margin-top: 1px;
 	margin-bottom: 1px;
 	text-align: right !important;
 }
-
 
 #page-content-wrapper
 {
